--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
     body {
-    background: radial-gradient(farthest-side, #182158 0%, #030414 100%) no-repeat fixed 0 0;
+    background: black;
     margin: 0;
   }
   h1 {
@@ -59,7 +62,7 @@ const opts = {
   blend: "screen",
   shift: 33,
   width: 25,
-  amp: 2.9
+  amp: 2.1
 };
 
 // Interactive dat.GUI controls
@@ -266,5 +269,3 @@ function start() {
 }
 
 </script>
-</body>
-</html>
